--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
 version: '3'
+name: chatbot
 
 services:
   streamlit-app:
-    build: .
-    #image: your_image_name:latest
+    container_name: streamlit_llama
+    image: run_llama
+
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8501:8501"
     volumes:
+      - ./models:/app/models
       - .:/app
