--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,5 @@ services:
     ports:
       - "8501:8501"
     volumes:
-      - ./models:/app/models
+      #- ./models:/app/models
       - ./src:/app/src
